Fix overflow problem on reference tree list

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -433,12 +433,12 @@ body form input {
 
 #treewrap-left {
   height: 90%;
-  margin: 12px 20px 12px 40px;
+  margin: 22px 20px 12px 40px;
 }
 
 #treewrap-right {
   height: 100%;
-  margin: 12px 20px 12px 20px;
+  margin: 22px 20px 12px 20px;
 }
 
 #tabs {
@@ -633,7 +633,7 @@ body form input {
 }
 
 .breadcrumbs ul {
-  padding: 10px;
+  padding: 8px 10px 8px 10px;
   border-bottom: 1px solid #868d92;
 }
 
@@ -1546,7 +1546,7 @@ ul#working-trees {
   margin: 0;
   padding: 0;
   text-align: left;
-  width: 100%;
+  white-space: normal;
 }
 
 #treewrap-right .ui-state-default ul#working-trees li.ui-state-default {
